--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,25 @@
+header,
+nav a {
+  background-color: #1d1d1d;
+  color: white;
+}
+
+header .nav-item {
+  display: block;
+  text-decoration: none;
+}
+
+h1 {
+  padding: 1.5rem;
+  margin: 0;
+}
+
+.nav-item:hover {
+  color:#1d1d1d;
+  background: white;
+}
+
+
 .disco,
 .conciertos {
   background-color: #1d1d1d;
