--- a/css/main.css
+++ b/css/main.css
@@ -21,19 +21,32 @@ h1 {
 
 
 .disco,
-.conciertos {
+.conciertos,
+.acciones {
   background-color: #1d1d1d;
   border: 5px solid #B8860B;
   padding-bottom: 1.5rem;
   margin-bottom: 2.5rem !important;
 }
+
+.acciones {
+  padding:1rem 2rem;
+}
+
 .disco h4,
 .disco p,
-.conciertos p {
+.conciertos p,
+.acciones h5 {
     padding: 0.8rem;
     margin: 0;
     color: white;
 }
+
+button:hover {
+  background: #B8860B;
+  color: white;
+}
+
 
 .disco p {
   font-size: 1.1rem;
