login y logout funcionando

--- a/css/main.css
+++ b/css/main.css
@@ -16,9 +16,24 @@ h1 {
   margin: 0;
 }
 
+header .identificacion {
+position: relative;
+left: 4rem;
+}
+
+nav > a.identificacion{
+  color : #B8860B;
+  text-decoration: none;
+}
+
 .nav-item:hover {
   color:#1d1d1d;
   background: white;
+}
+
+.nav-item.identificacion:hover {
+  color: white;
+  background: #B8860B;
 }
 
 .main {
