--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ header .nav-item {
   text-decoration: none;
 }
 
-h1 {
+h1,h5 {
   padding: 1.5rem;
   margin: 0;
 }
@@ -26,7 +26,8 @@ nav > a.identificacion{
   text-decoration: none;
 }
 
-.nav-item:hover {
+.nav-item:hover,
+footer a:hover {
   color:#1d1d1d;
   background: white;
 }
@@ -40,18 +41,27 @@ nav > a.identificacion{
   padding: 2rem;
 }
 
+.intro,
+.novedad {
+  border: 2px solid #B8860B;
+  padding: 1.3rem;
+}
+
 .disco,
 .conciertos,
-.acciones {
+.acciones,
+.pedido,
+ {
   background-color: #1d1d1d;
   border: 5px solid #B8860B;
-  padding-bottom: 1.5rem;
+  padding-bottom: 1.3rem;
   margin-bottom: 2.5rem !important;
 }
 
 .acciones {
   padding:1rem 2rem;
 }
+
 
 .disco h4,
 .disco p,
@@ -152,11 +162,11 @@ blockquote{
 
 
 
-
-
-
-
-
 footer {
   height: 6rem;
+}
+
+footer a {
+  color:white;
+  text-decoration: none;
 }
