--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,8 @@ footer a:hover {
   padding:1rem 2rem;
 }
 
-.cancion_editar {
+.cancion_editar,
+.canciones .cancion {
   padding: 1.2rem 0;
   border-top: 1px solid #B8860B;
 }
