--- a/css/main.css
+++ b/css/main.css
@@ -2,70 +2,71 @@ header,
 nav a,
 footer,
 body {
-  background-color: #1d1d1d;
-  color: white;
+    background-color: #1d1d1d;
+    color: white;
 }
 
 header .nav-item {
-  display: block;
-  text-decoration: none;
+    display: block;
+    text-decoration: none;
 }
 
-h1,h5 {
-  padding: 1.5rem;
-  margin: 0;
+h1,
+h5 {
+    padding: 1.5rem;
+    margin: 0;
 }
 
 header .identificacion {
-position: relative;
-left: 4rem;
+    position: relative;
+    left: 4rem;
 }
 
-nav > a.identificacion{
-  color : #B8860B;
-  text-decoration: none;
+nav>a.identificacion {
+    color: #B8860B;
+    text-decoration: none;
 }
 
 .nav-item:hover,
 footer a:hover {
-  color:#1d1d1d;
-  background: white;
+    color: #1d1d1d;
+    background: white;
 }
 
 .nav-item.identificacion:hover {
-  color: white;
-  background: #B8860B;
+    color: white;
+    background: #B8860B;
 }
 
 .main {
-  padding: 2rem;
+    padding: 2rem;
 }
 
 .intro,
 .novedad {
-  border: 2px solid #B8860B;
-  padding: 1.3rem;
+    border: 2px solid #B8860B;
+    padding: 1.3rem;
 }
 
 .disco,
 .conciertos,
 .acciones,
-.pedido
- {
-  background-color: #1d1d1d;
-  border: 5px solid #B8860B;
-  padding-bottom: 1.3rem;
-  margin-bottom: 2.5rem !important;
+.pedido,
+.buscador {
+    background-color: #1d1d1d;
+    border: 5px solid #B8860B;
+    padding-bottom: 1.3rem;
+    margin-bottom: 2.5rem !important;
 }
 
 .acciones {
-  padding:1rem 2rem;
+    padding: 1rem 2rem;
 }
 
 .cancion_editar,
 .canciones .cancion {
-  padding: 1.2rem 0;
-  border-top: 1px solid #B8860B;
+    padding: 1.2rem 0;
+    border-top: 1px solid #B8860B;
 }
 
 .disco h4,
@@ -79,103 +80,104 @@ footer a:hover {
 }
 
 button:hover {
-  background: #B8860B;
-  color: white;
+    background: #B8860B;
+    color: white;
 }
 
-
 .disco p {
-  font-size: 1.1rem;
+    font-size: 1.1rem;
 }
 
 .disco .anio {
-  font-size: 1.25em;
+    font-size: 1.25em;
 }
 
-.caratula > img {
-  width: 100%;
+.caratula>img {
+    width: 100%;
 }
 
 .disco .lista-canciones,
 .disco {
-  padding: 0 3% 0 3%;
+    padding: 0 3% 0 3%;
 }
+
 .disco .submit {
-  margin-top: 1.5rem;
+    margin-top: 1.5rem;
 }
 
-.cancion .nombre p{
- font-size: 1.6rem;
+.cancion .nombre p {
+    font-size: 1.6rem;
 }
 
-.cancion .duracion p{
-  font-size: 1.2rem;
- }
-
-.conciertos .row:first-child
- {
-  font-weight: bold;
+.cancion .duracion p {
+    font-size: 1.2rem;
 }
 
-.conciertos .col ,
+.conciertos .row:first-child {
+    font-weight: bold;
+}
+
+.conciertos .col,
 #records td,
 #records th,
 .db th,
-.db td{
-  border-bottom: 2px solid #B8860B;
-  padding-bottom: 1.5rem;
+.db td {
+    border-bottom: 2px solid #B8860B;
+    padding-bottom: 1.5rem;
 }
 
 #records td {
-  padding: 1rem 1.5rem;
+    padding: 1rem 1.5rem;
 }
-
-
 
 .conciertos .row:last-child .col {
-  border-bottom: none;
-  padding-bottom: 0;
+    border-bottom: none;
+    padding-bottom: 0;
 }
 
-.buscador{
-  padding:1.6rem;
-}
-.buscador > input {
-  background: white;
-  color: black;
-  box-shadow: 0 0 1.6rem #B8860B;
+.buscador {
+    padding: 1.6rem;
 }
 
+h7 {
+    margin: 2rem;
+    font-size: 1.8rem;
+    color: #B8860B;
+}
+
+.barra-busqueda>input {
+    background: white;
+    color: black;
+    box-shadow: 0 0 1.6rem #B8860B;
+}
 
 #bio p {
-  text-align: center;
+    text-align: center;
 }
 
 #bio img {
-  padding: 1.5rem;
+    padding: 1.5rem;
 }
 
 .db a {
-  text-decoration: none;
-  color: #B8860B;
+    text-decoration: none;
+    color: #B8860B;
 }
 
-blockquote{
-  color: #B8860B;
-  font-weight: bold;
+blockquote {
+    color: #B8860B;
+    font-weight: bold;
 }
 
 .pedido {
-  padding : 3rem;
+    padding: 3rem;
 }
 
-
-
 footer {
-  height: 6rem;
+    height: 6rem;
 }
 
 footer a {
-  color:white;
-  text-decoration: none;
+    color: white;
+    text-decoration: none;
 }
